force-app/main/default/objects/Strategic__GEM_Portal_Address__c/Strategic__GEM_Portal_Address__c.object-meta.xml
<CustomObject>
    <label>GEM Portal Address</label>
    <nameField>
        <label>GEM Portal Address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GEM Portal Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>