force-app/main/default/objects/Strategic__GEM_Portal_Address__c/fields/Strategic__Address_Id__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Address_Id__c</fullName>
    <externalId>true</externalId>
    <label>Address Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>