force-app/main/default/objects/Strategic__GEM_Portal_Address__c/fields/Strategic__City__c.field-meta.xml
<CustomField>
    <fullName>Strategic__City__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>