force-app/main/default/objects/Strategic__GEM_Portal_Address__c/fields/Strategic__Country__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Country__c</fullName>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>