force-app/main/default/objects/Strategic__GEM_Portal_Address__c/fields/Strategic__GEM_Portal_Grant__c.field-meta.xml
<CustomField>
    <fullName>Strategic__GEM_Portal_Grant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GEM Portal Grant</label>
    <referenceTo>Strategic__GEMPortal_Grants__c</referenceTo>
    <relationshipLabel>GEM Portal Addresses</relationshipLabel>
    <relationshipName>GEM_Portal_Addresses</relationshipName>
    <type>Lookup</type>
</CustomField>