force-app/main/default/objects/Strategic__GEM_Portal_Address__c/fields/Strategic__Postcode__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Postcode__c</fullName>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>