force-app/main/default/objects/Strategic__GEM_Portal_Address__c/fields/Strategic__State__c.field-meta.xml
<CustomField>
    <fullName>Strategic__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>