force-app/main/default/objects/Strategic__GEM_Portal_Address__c/fields/Strategic__Street__c.field-meta.xml
<CustomField>
    <fullName>Strategic__Street__c</fullName>
    <label>Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>